objects/Brand__c.object
<CustomObject>
    <fields>
        <fullName>BrandCode__c</fullName>
        <label>BrandCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandFamily__c</fullName>
        <description>Feed Outbound- Brand</description>
        <label>BrandFamily</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRCOperatingCompany__c</fullName>
        <description>Feed Outbound- Brand</description>
        <label>CRCOperatingCompany</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeCategory__c</fullName>
        <description>Feed Outbound- Brand</description>
        <formula>&apos;BRANDS&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeType__c</fullName>
        <description>Feed Outbound- Brand</description>
        <formula>&apos;ALL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Code Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(CreatedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(CreatedDate) , 0, 4) + &quot; &quot;+MID(TEXT(CreatedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayDescription__c</fullName>
        <description>Feed Outbound - Hard Code empty value.</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayDescription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <description>Feed Outbound - Hardcode value &apos;0&apos;</description>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DisplayOrder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <formula>&apos;BRANDMAINT&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCorrespondence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCorrespondence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <description>Feed Outbound - DateFormat.</description>
        <formula>MID( TEXT(LastModifiedDate) , 6, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 9, 2)+&quot;-&quot;+MID( TEXT(LastModifiedDate) , 0, 4) + &quot; &quot;+MID(TEXT(LastModifiedDate), 11, 9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyBrandCodes__c</fullName>
        <label>Legacy Brand Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModuleName__c</fullName>
        <description>Feed Outbound -Brand</description>
        <formula>&apos;ALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_Company__c</fullName>
        <label>Operating Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Feed Outbound - Hardcode value empty</description>
        <formula>&apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineCode__c</fullName>
        <description>Feed Outbound - Product Line Code</description>
        <formula>Product_Line__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductLineCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLineFlag__c</fullName>
        <formula>&apos;0&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductLineFlag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>Product_Line__c</referenceTo>
        <relationshipLabel>Brands</relationshipLabel>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScreenName__c</fullName>
        <formula>&apos;GLOBAL&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Screen Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <description>Feed Outbound -Brand</description>
        <formula>&apos;ALORICAALTRIA&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TenantId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USTDateType__c</fullName>
        <description>Feed Outbound -Brand</description>
        <label>USTDateType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>BrandCode__c</columns>
        <columns>Description__c</columns>
        <columns>IsActive__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Product_Line__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>